sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/SFDC_Feature__mdt.object-meta.xml
<CustomObject>
    <description>Industry key components and features for transitioning to</description>
    <label>SFDC Feature</label>
    <pluralLabel>SFDC Features</pluralLabel>
</CustomObject>