sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Answer_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Answer_API_Name__c</fullName>
    <description>The SFDC Answer that should be selected to show the positive label, otherwise shows negative label</description>
    <inlineHelpText>The SFDC Answer that should be selected to show the positive label, otherwise shows negative label</inlineHelpText>
    <label>Answer API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>