sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Assessment_Result_Fields__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Result_Fields__c</fullName>
    <inlineHelpText>Comma separated list of Assessment__c field API names. When any of the listed fields has a value populated it will trigger assignment of the Priority set on this configuration</inlineHelpText>
    <label>Assessment Result Fields</label>
    <type>TextArea</type>
</CustomField>