sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Conflicting_Custom_Objects__c.field-meta.xml
<CustomField>
    <fullName>Conflicting_Custom_Objects__c</fullName>
    <inlineHelpText>Comma separated list of custom object API names that might conflict with this SFDC feature</inlineHelpText>
    <label>Conflicting Custom Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>