sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <inlineHelpText>Developer name of custom label for name for this feature</inlineHelpText>
    <label>Custom Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>