sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Documentation_URL__c.field-meta.xml
<CustomField>
    <fullName>Documentation_URL__c</fullName>
    <label>Documentation URL</label>
    <type>Url</type>
</CustomField>