sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Explanation_Label__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Label__c</fullName>
    <label>Explanation Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>