sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Feature_Description__c.field-meta.xml
<CustomField>
    <fullName>Feature_Description__c</fullName>
    <label>Feature Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>