sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Negative_Label__c.field-meta.xml
<CustomField>
    <fullName>Negative_Label__c</fullName>
    <label>Negative Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>