sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Assigned priority when a corresponding Assessment result is evaluated for this feature to apply</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Helpful for Future Roadmap</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Key Feature</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Strongly Recommended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>