sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Reason_Label__c.field-meta.xml
<CustomField>
    <fullName>Reason_Label__c</fullName>
    <inlineHelpText>Name of Custom Label with description text for reason to use this feature with the assigned priority</inlineHelpText>
    <label>Reason Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>