sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/fields/Render_Flags__c.field-meta.xml
<CustomField>
    <fullName>Render_Flags__c</fullName>
    <description>Additional logic for determining if positive label shows up</description>
    <inlineHelpText>Additional logic for determining if positive label shows up</inlineHelpText>
    <label>Render Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>