sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Feature__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Index__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Custom_Label__c</columns>
    <columns>Feature_Description__c</columns>
    <columns>Explanation_Label__c</columns>
    <columns>Negative_Label__c</columns>
    <columns>Assessment_Result_Fields__c</columns>
    <columns>Conflicting_Custom_Objects__c</columns>
    <columns>Documentation_URL__c</columns>
    <columns>Answer_API_Name__c</columns>
    <columns>Render_Flags__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>